starting work on new gallery adding random back and align issues
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/1.2@566966 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -30,6 +30,10 @@ root {
     user-select: none;
     border-image: initial;
 }
+#satl_table {
+    background-color:#eef5fb; 
+    padding:10px;
+}
 .togbox {
     padding: 0;
     width: 22px;
